jdk9 fixes